--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>3.1.2.RELEASE</version>
@@ -158,6 +158,12 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
         </dependency>
     </dependencies>
     <build>
