--- a/pom.xml
+++ b/pom.xml
@@ -159,11 +159,23 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-        
+        <!--exfile pdf-->
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
+        </dependency>
+        <!--export file excel-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6</version>
         </dependency>
     </dependencies>
     <build>
