--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,4 +57,10 @@
             30
         </session-timeout>
     </session-config>
+    
+<!--    <error-page>
+         Forbidden directory listing 
+        <error-code>403</error-code>
+        <location>/error.</location>
+    </error-page>-->
 </web-app>
