--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,9 +58,9 @@
         </session-timeout>
     </session-config>
     
-<!--    <error-page>
+    <error-page>
          Forbidden directory listing 
         <error-code>403</error-code>
         <location>/error.</location>
-    </error-page>-->
+    </error-page>
 </web-app>
